; ModuleID = '/home/carl/AnghaBench/git/extr_log-tree.c_add_name_decoration.c'
source_filename = "/home/carl/AnghaBench/git/extr_log-tree.c_add_name_decoration.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object = type { i32 }
%struct.name_decoration = type { i32, i32 }

@name_decoration = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @add_name_decoration(i32 %0, i8* %1, %struct.object* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.object*, align 8
  %7 = alloca %struct.name_decoration*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store %struct.object* %2, %struct.object** %6, align 8
  %8 = load %struct.name_decoration*, %struct.name_decoration** %7, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @FLEX_ALLOC_STR(%struct.name_decoration* %8, i8* %9, i8* %10)
  %12 = load i32, i32* %4, align 4
  %13 = load %struct.name_decoration*, %struct.name_decoration** %7, align 8
  %14 = getelementptr inbounds %struct.name_decoration, %struct.name_decoration* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  %15 = load %struct.object*, %struct.object** %6, align 8
  %16 = load %struct.name_decoration*, %struct.name_decoration** %7, align 8
  %17 = call i32 @add_decoration(i32* @name_decoration, %struct.object* %15, %struct.name_decoration* %16)
  %18 = load %struct.name_decoration*, %struct.name_decoration** %7, align 8
  %19 = getelementptr inbounds %struct.name_decoration, %struct.name_decoration* %18, i32 0, i32 1
  store i32 %17, i32* %19, align 4
  ret void
}

declare dso_local i32 @FLEX_ALLOC_STR(%struct.name_decoration*, i8*, i8*) #1

declare dso_local i32 @add_decoration(i32*, %struct.object*, %struct.name_decoration*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
